Header and Footer
Header and Footer

--- a/src/app/Footer/sitemap/sitemap.component.html
+++ b/src/app/Footer/sitemap/sitemap.component.html
@@ -1,1 +1,5 @@
-<p>sitemap works!</p>
+<nav class="navbar navbar-expand-lg fixed-bottom text-bg-info">
+    <div class="container">
+      <a class="navbar-brand" href="#">Portfolio</a>
+    </div>
+  </nav>
