--- a/src/app/Header/navigation/navigation.component.html
+++ b/src/app/Header/navigation/navigation.component.html
@@ -1,4 +1,21 @@
-<div class="container">
-    <p>navigation works!</p>
-
-</div>
+<nav class="navbar navbar-expand-lg text-bg-info">
+    <div class="container">
+      <a class="navbar-brand" href="#">Crussader</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Achievements</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
